--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,9 @@
 **/android/gradlew.bat
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
+**/android/app/.classpath
+**/android/app/.project
+**/android/app/.settings/
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
