--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   lpinyin: 1.0.7
   azlistview: ^0.1.2
+  webview_flutter: ^0.3.17
 
 dev_dependencies:
   flutter_test:
