--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   lpinyin: 1.0.7
   azlistview: ^0.1.2
-  webview_flutter: ^0.3.17
+  webview_flutter: ^0.3.18
+  shared_preferences: ^0.5.6
 
 dev_dependencies:
   flutter_test:
